[package]
name = "spl-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stake"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "=1.18.15"
solana-program = "=1.18.15"
solana-sdk = "=1.18.15"
anyhow = "1.0.86"
tokio = "1.39.2"
spl-token = "6.0.0"

