[package]
name = "spl-stake"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_stake"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18.25"
solana-program = "1.18.25"
solana-sdk = "1.18.25"
anyhow = "1.0.89"
tokio = "1.40.0"
spl-token = "6.0.0"

